--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.12",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
