--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.12",
+    "@reduxjs/toolkit": "^1.9.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-redux": "^8.0.5",
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3"
   },
