--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-redux": "^8.0.5",
